--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -128,11 +128,12 @@ stages:
               namespace: $(k8sNamespaceForPR)
               arguments: svc
           
-          - powershell: |
-              $service=$(echo '$(get.KubectlOutput)' |  Out-String | ConvertFrom-Json).items[0]
-              $ip=$service.status.loadBalancer.ingress.ip
-              $port=$service.spec.ports.port
-              $message="Deployment to your review-app succeeded."
-              if($ip) {$message="${message}<br><br>You can navigate to http://${ip}:${port} to test your changes"}
+          - script: |
+              ip=$(echo '$(get.KubectlOutput)' | python -c 'import json,sys;obj=json.load(sys.stdin); "" if (not len(obj["items"]) > 0) print obj["items"][0]["status"]["loadBalancer"]["ingress"]["ip"]+":"+obj["items"][0]["spec"]["ports"]["port"]' )
+              message="Deployment to your review-app succeeded."
+              if [ -n $ip ] 
+              then
+              message="${message}<br><br>You can navigate to http://${ip}:${port} to test your changes"}
+              fi
               echo "##vso[task.setvariable variable=GITHUB_COMMENT]${message}"
 
