--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -129,11 +129,11 @@ stages:
               arguments: svc
           
           - script: |
-              ip=$(echo '$(get.KubectlOutput)' | python3 -c 'import json,sys;obj=json.load(sys.stdin); print(obj); print("") if (not len(obj["items"]) > 0) else print(obj["items"][0]["status"]["loadBalancer"]["ingress"][0]["ip"]+":"+str(obj["items"][0]["spec"]["ports"][0]["port"]))' )
+              url=$(echo '$(get.KubectlOutput)' | python3 -c 'import json,sys;obj=json.load(sys.stdin); print(obj); print("") if (not len(obj["items"]) > 0) else print(obj["items"][0]["status"]["loadBalancer"]["ingress"][0]["ip"]+":"+str(obj["items"][0]["spec"]["ports"][0]["port"]))' )
               message="Deployment to your review-app succeeded."
-              if [ -z "$ip" ] 
+              if [ ! -z "$url" ] 
               then
-              message="${message}<br><br>You can navigate to http://${ip}:${port} to test your changes"}
+                message="${message}<br><br>You can navigate to http://${url} to test your changes"
               fi
               echo "##vso[task.setvariable variable=GITHUB_COMMENT]${message}"
 
