--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -129,7 +129,7 @@ stages:
               arguments: svc
           
           - script: |
-              url=$(echo '$(get.KubectlOutput)' | python3 -c python3 -c 'import json,sys;obj=json.load(sys.stdin); print("") if (not len(obj["items"]) > 0) else print(obj["items"][0]["status"]["loadBalancer"]["ingress"][0]["ip"]+":"+str(obj["items"][0]["spec"]["ports"][0]["port"]))' )
+              url=$(echo '$(get.KubectlOutput)' | python3 -c 'import json,sys;obj=json.load(sys.stdin); print("") if (not len(obj["items"]) > 0) else print(obj["items"][0]["status"]["loadBalancer"]["ingress"][0]["ip"]+":"+str(obj["items"][0]["spec"]["ports"][0]["port"]))' )
               message="Deployment to your review-app succeeded."
               if [ ! -z "$url" ] 
               then
