--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -127,10 +127,10 @@ stages:
               command: get
               namespace: $(k8sNamespaceForPR)
               arguments: svc
+              outputFormat: jsonpath='http://{.items[0].status.loadBalancer.ingress[0].ip}:{.items[0].spec.ports[0].port}'
           
           - script: |
-              url=$(echo '$(get.KubectlOutput)' | python3 -c 'import json,sys;obj=json.load(sys.stdin); print("") if (not len(obj["items"]) > 0) else print(obj["items"][0]["status"]["loadBalancer"]["ingress"][0]["ip"]+":"+str(obj["items"][0]["spec"]["ports"][0]["port"]))' )
-              message="Deployment to your review-app succeeded."
+              url="$(get.KubectlOutput)"
               if [ ! -z "$url" ] 
               then
                 message="${message}<br><br>You can navigate to http://$url to test your changes"
